--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "lint": "eslint src --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d dist"
+    "deploy": "gh-pages -d dist",
+    "format": "npx prettier --write '**/*.{js,jsx,ts,tsx,css,scss,json,md}'"
   },
   "dependencies": {
     "react": "^18.2.0",
